# HelloWorld

./: .cproject  .gitignore  CMakeLists.txt  README.md  StratifyAppSettings.json  StratifyLocalSettings.json  StratifySettings.json  cappsettings.ini  sl_settings.json
src/: CMakeLists.txt  main.cpp  sl_config.h
